# fastapi_playground

./: .gitignore  .pre-commit-config.yaml  README.md  log.txt
async_fastapi/: ASYNC_README.md  alembic.ini  pyproject.toml
async_fastapi/app/: main.py
async_fastapi/app/api/: deps.py
async_fastapi/app/core/: config.py
async_fastapi/app/crud/: crud_user.py
async_fastapi/app/db/: session.py
background_task_example/: Dockerfile  docker-compose.yml  main.py
background_task_example/app/: main.py
docker-fastapi-debug-setup/: Dockerfile  docker-compose.yml  docker_debug_README.md  requirements.txt
docker-fastapi-debug-setup/app/: main.py
git_rebase_demo/: main.py
pytest_tutorial/: README.md
pytest_tutorial/app/: main.py
pytest_tutorial/tests/: test_basic.py
sqitch_tutorial/: sqitch.plan
sqitch_tutorial/deploy/: appschema.sql  users.sql
sqitch_tutorial/revert/: appschema.sql  users.sql
sqitch_tutorial/verify/: appschema.sql  users.sql
